Added argline for test
Increase the memory used by the tests to 1500m.  However, it still does
not prevent the memory intensive tests from failing on a low physical
memory build machine.